qa/apps/users-api/certificate-bundle-overrides.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
spec:
  template:
    spec:
      volumes:
        - name: ca-bundle
          emptyDir: {}
