qa/apps/users-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: users-api
  name: users-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      imagePullSecrets:
      - name: images-registry-credentials
      containers:
      - image: index.docker.io/ferlabcrsj/users-api:3d90c5871d937b8909e023ec7cd3c647deb237f8-1666812790 # {"$imagepolicy": "cqdg-qa-fluxcd:users-api"}
        name: users-api
        resources:
          requests:
            memory: "2048Mi"
            cpu: "1.00"
          limits:
            memory: "4096Mi"
            cpu: "2.00"
        volumeMounts:
        - name: postgres-ca-certificate
          mountPath: /opt/ca
          readOnly: true
        - name: ca-bundle
          mountPath: /opt/ca-bundle
          readOnly: true
