qa/apps/users-api/dns-overrides.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
spec:
  template:
    spec:
      volumes:
        - name: corefile
          configMap:
            name: coredns-zonefiles-corefile
            defaultMode: 0444
        - name: zonefile
          configMap:
            name: qa-domain-zonefile
            defaultMode: 0444
        - name: zonefile-copy
          emptyDir: {}
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 127.0.0.1
          - 169.254.25.10
        searches:
          - search
          - cqdg-qa.svc.cluster.qa
          - svc.cluster.qa
          - cluster.qa
          - openstacklocal
        options:
          - name: ndots
            value: "5"
      containers:
        - name: coredns
          image: coredns/coredns:1.8.4
          command: ["/coredns"]
          args: ["-conf", "/opt/corefile/Corefile"]
          volumeMounts:
            - name: corefile
              mountPath: /opt/corefile
              readOnly: true
            - name: zonefile-copy
              mountPath: /opt/zonefiles
              readOnly: true
