qa/apps/users-api/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: users-api
  name: users-api
spec:
  ports:
    - port: 1212
      protocol: TCP
      targetPort: 1212
  selector:
    app: users-api
