qa/apps/users-api/ingresses.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: users-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
    - hosts:
        - users.qa.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: users.qa.cqdg.ferlab.bio
      http:
        paths:
          - path: /
            backend:
              serviceName: users-api
              servicePort: 1212
